# sli_gpd_pick_object

./: CMakeLists.txt  change instruction.txt  package.xml
exps/: cae.ods
include/: examine_grasps.h
launch/: gpd_pick_object_service.launch  observation_demo.launch  occpuy.launch  pick_object_loop_demo.launch  realsense200.launch
launch/gpd/: gpd.launch
src/: GPD_depth_GQCNN.py  bounding_box_preprocess.cpp  classifyGrasp.cpp  examine_grasps.cpp  frame_trans.cpp  octomap_run.cpp  open_cfg.py  pick_object_demo.cpp  plan_grasps_service.cpp  plan_grasps_service_my.cpp  r200camera_positioner.cpp  ur5move.cpp
srv/: depth_GQCNNPredict.srv
